--- a/index.html
+++ b/index.html
@@ -56,6 +56,205 @@
             </ul>
         </section>
     </header>
-    
+    <!-- Popular Collection -->
+    <main>
+            <h2> Popular Collection</h2>
+            <section class="container">
+                <div class="item">
+                    <div class="p-image">
+                        <img src="./images/tripod.png" alt="">
+                    </div>
+                    <div class="p-info">
+                        <h2 class="p-title">Flex Tripod</h2>
+                        <h3 class="p-price">$50.48</h3>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span class="p-tag">4.99</span>
+                        </div>
+                        <p class="des">
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="p-image">
+                        <img src="./images/mic.png" alt="">
+                    </div>
+                    <div class="p-info">
+                        <h2 class="p-title">microphone</h2>
+                        <h3 class="p-price">$120.25</h3>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span class="p-tag">4.99</span>
+                        </div>
+                        <p class="des">
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="p-image">
+                        <img src="./images/airpod.png" alt="">
+                    </div>
+                    <div class="p-info">
+                        <h2 class="p-title">Airbuds</h2>
+                        <h3 class="p-price">$100.00</h3>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span class="p-tag">4.99</span>
+                        </div>
+                        <p class="des">
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="p-image">
+                        <img src="./images/drone.png" alt="">
+                    </div>
+                    <div class="p-info">
+                        <h2 class="p-title">Drone</h2>
+                        <h3 class="p-price">$980.25</h3>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span class="p-tag">4.99</span>
+                        </div>
+                        <p class="des">
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="p-image">
+                        <img src="./images/lights.png" alt="">
+                    </div>
+                    <div class="p-info">
+                        <h2 class="p-title">Light Setup</h2>
+                        <h3 class="p-price">$1200.00</h3>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span class="p-tag">4.99</span>
+                        </div>
+                        <p class="des">
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="p-image">
+                        <img src="./images/setup.png" alt="">
+                    </div>
+                    <div class="p-info">
+                        <h2 class="p-title">Photoshoot set</h2>
+                        <h3 class="p-price">$820.40</h3>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span class="p-tag">4.99</span>
+                        </div>
+                        <p class="des">
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="p-image">
+                        <img src="./images/single-light.png" alt="">
+                    </div>
+                    <div class="p-info">
+                        <h2 class="p-title">Green Screen</h2>
+                        <h3 class="p-price">$25.48</h3>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span class="p-tag">4.99</span>
+                        </div>
+                        <p class="des">
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="p-image">
+                        <img src="./images/action.png" alt="">
+                    </div>
+                    <div class="p-info">
+                        <h2 class="p-title">Action Camera</h2>
+                        <h3 class="p-price">$380.00</h3>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span class="p-tag">4.99</span>
+                        </div>
+                        <p class="des">
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="p-image">
+                        <img src="./images/camera.png" alt="">
+                    </div>
+                    <div class="p-info">
+                        <h2 class="p-title">Vlogging Camera</h2>
+                        <h3 class="p-price">$1800.80</h3>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span class="p-tag">4.99</span>
+                        </div>
+                        <p class="des">
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <div class="see-more">
+                <p>see more <i class="fa-solid fa-arrow-right-long"></i></p>
+            </div>
+
+            <section class="f-product">
+                <div class="f-product-image" >
+                    <img src="./images/gear.png" alt="">
+                </div>
+                <div f-product-text>
+                    <h2> Featured products at one place</h2>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button class="s-btn"> Join Now <i class="fa-solid fa-arrow-right-long"></i></button>
+                </div>
+            </section>
+    </main>
 </body>
 </html>
