--- a/index.html
+++ b/index.html
@@ -251,10 +251,17 @@
                 </div>
                 <div f-product-text>
                     <h2> Featured products at one place</h2>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <p class="f-p">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                     <button class="s-btn"> Join Now <i class="fa-solid fa-arrow-right-long"></i></button>
                 </div>
             </section>
     </main>
+    <footer>
+        <div class="foot">
+            <h3>Influencer products</h3>
+            <p>Copyright © 2020  influencer products <br> All rights reserved</p>
+            
+        </div>
+    </footer>
 </body>
 </html>
