fore mobile done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </nav>
         <!-- banner -->
-        <div class="banner">
+        <div class="banner ">
             <div class="banner-text">
                 <h2>
                     Start your Journey as Influencer
@@ -44,7 +44,7 @@
             </div>
         </div>
         <!-- e-com logo -->
-        <section class="e-com">
+        <section class="e-com hide ">
             <ul>
                 <li> <img src="./logos/Alibaba.svg" alt=""></li>
                 <li> <img src="./logos/Amazon.svg" alt=""></li>
@@ -245,7 +245,7 @@
                 <p>see more <i class="fa-solid fa-arrow-right-long"></i></p>
             </div>
 
-            <section class="f-product">
+            <section class="f-product ">
                 <div class="f-product-image" >
                     <img src="./images/gear.png" alt="">
                 </div>
